CLanguage/Parser/y.output
   0  $accept : translation_unit $end

   1  primary_expression : IDENTIFIER
   2                     | CONSTANT
   3                     | STRING_LITERAL
   4                     | TRUE
   5                     | FALSE
   6                     | '(' expression ')'

   7  postfix_expression : primary_expression
   8                     | postfix_expression '[' expression ']'
   9                     | postfix_expression '(' ')'
  10                     | postfix_expression '(' argument_expression_list ')'
  11                     | postfix_expression '.' IDENTIFIER
  12                     | postfix_expression PTR_OP IDENTIFIER
  13                     | postfix_expression INC_OP
  14                     | postfix_expression DEC_OP
  15                     | '(' type_name ')' '{' initializer_list '}'
  16                     | '(' type_name ')' '{' initializer_list ',' '}'

  17  argument_expression_list : assignment_expression
  18                           | argument_expression_list ',' assignment_expression

  19  unary_expression : postfix_expression
  20                   | INC_OP unary_expression
  21                   | DEC_OP unary_expression
  22                   | '&' cast_expression
  23                   | '*' cast_expression
  24                   | unary_operator cast_expression
  25                   | SIZEOF unary_expression
  26                   | SIZEOF '(' type_name ')'

  27  unary_operator : '+'
  28                 | '-'
  29                 | '~'
  30                 | '!'

  31  cast_expression : unary_expression
  32                  | '(' type_name ')' cast_expression

  33  multiplicative_expression : cast_expression
  34                            | multiplicative_expression '*' cast_expression
  35                            | multiplicative_expression '/' cast_expression
  36                            | multiplicative_expression '%' cast_expression

  37  additive_expression : multiplicative_expression
  38                      | additive_expression '+' multiplicative_expression
  39                      | additive_expression '-' multiplicative_expression

  40  shift_expression : additive_expression
  41                   | shift_expression LEFT_OP additive_expression
  42                   | shift_expression RIGHT_OP additive_expression

  43  relational_expression : shift_expression
  44                        | relational_expression '<' shift_expression
  45                        | relational_expression '>' shift_expression
  46                        | relational_expression LE_OP shift_expression
  47                        | relational_expression GE_OP shift_expression

  48  equality_expression : relational_expression
  49                      | equality_expression EQ_OP relational_expression
  50                      | equality_expression NE_OP relational_expression

  51  and_expression : equality_expression
  52                 | and_expression '&' equality_expression

  53  exclusive_or_expression : and_expression
  54                          | exclusive_or_expression '^' and_expression

  55  inclusive_or_expression : exclusive_or_expression
  56                          | inclusive_or_expression '|' exclusive_or_expression

  57  logical_and_expression : inclusive_or_expression
  58                         | logical_and_expression AND_OP inclusive_or_expression

  59  logical_or_expression : logical_and_expression
  60                        | logical_or_expression OR_OP logical_and_expression

  61  conditional_expression : logical_or_expression
  62                         | logical_or_expression '?' expression ':' conditional_expression

  63  assignment_expression : conditional_expression
  64                        | unary_expression assignment_operator assignment_expression

  65  assignment_operator : '='
  66                      | MUL_ASSIGN
  67                      | DIV_ASSIGN
  68                      | MOD_ASSIGN
  69                      | ADD_ASSIGN
  70                      | SUB_ASSIGN
  71                      | LEFT_ASSIGN
  72                      | RIGHT_ASSIGN
  73                      | BINARY_AND_ASSIGN
  74                      | BINARY_XOR_ASSIGN
  75                      | BINARY_OR_ASSIGN
  76                      | AND_ASSIGN
  77                      | OR_ASSIGN

  78  expression : assignment_expression
  79             | expression ',' assignment_expression

  80  constant_expression : conditional_expression

  81  declaration : declaration_specifiers ';'
  82              | declaration_specifiers init_declarator_list ';'

  83  declaration_specifiers : storage_class_specifier
  84                         | storage_class_specifier declaration_specifiers
  85                         | type_specifier
  86                         | type_specifier declaration_specifiers
  87                         | type_qualifier
  88                         | type_qualifier declaration_specifiers
  89                         | function_specifier
  90                         | function_specifier declaration_specifiers

  91  init_declarator_list : init_declarator
  92                       | init_declarator_list ',' init_declarator

  93  init_declarator : declarator
  94                  | declarator '=' initializer

  95  storage_class_specifier : TYPEDEF
  96                          | EXTERN
  97                          | STATIC
  98                          | AUTO
  99                          | REGISTER

 100  type_specifier : VOID
 101                 | CHAR
 102                 | SHORT
 103                 | INT
 104                 | LONG
 105                 | FLOAT
 106                 | DOUBLE
 107                 | SIGNED
 108                 | UNSIGNED
 109                 | BOOL
 110                 | COMPLEX
 111                 | IMAGINARY
 112                 | struct_or_union_or_class_specifier
 113                 | enum_specifier
 114                 | TYPE_NAME

 115  identifier_or_typename : IDENTIFIER
 116                         | TYPE_NAME

 117  struct_or_union_or_class_specifier : struct_or_union_or_class identifier_or_typename class_body
 118                                     | struct_or_union_or_class identifier_or_typename ':' base_specifier class_body
 119                                     | struct_or_union_or_class class_body
 120                                     | struct_or_union_or_class identifier_or_typename

 121  base_specifier : identifier_or_typename
 122                 | PUBLIC identifier_or_typename
 123                 | PRIVATE identifier_or_typename
 124                 | PROTECTED identifier_or_typename

 125  struct_or_union_or_class : STRUCT
 126                           | CLASS
 127                           | UNION

 128  specifier_qualifier_list : type_specifier specifier_qualifier_list
 129                           | type_specifier
 130                           | type_qualifier specifier_qualifier_list
 131                           | type_qualifier

 132  enum_specifier : ENUM '{' enumerator_list '}'
 133                 | ENUM identifier_or_typename '{' enumerator_list '}'
 134                 | ENUM '{' enumerator_list ',' '}'
 135                 | ENUM identifier_or_typename '{' enumerator_list ',' '}'
 136                 | ENUM identifier_or_typename

 137  enumerator_list : enumerator
 138                  | enumerator_list ',' enumerator

 139  enumerator : IDENTIFIER
 140             | IDENTIFIER '=' constant_expression

 141  function_specifier : INLINE

 142  declarator : pointer direct_declarator
 143             | direct_declarator

 144  direct_declarator_identifier_list : IDENTIFIER
 145                                    | '~' IDENTIFIER
 146                                    | direct_declarator_identifier_list COLONCOLON IDENTIFIER
 147                                    | direct_declarator_identifier_list COLONCOLON '~' IDENTIFIER

 148  direct_declarator : direct_declarator_identifier_list
 149                    | '(' declarator ')'
 150                    | direct_declarator '[' type_qualifier_list assignment_expression ']'
 151                    | direct_declarator '[' type_qualifier_list ']'
 152                    | direct_declarator '[' assignment_expression ']'
 153                    | direct_declarator '[' STATIC type_qualifier_list assignment_expression ']'
 154                    | direct_declarator '[' type_qualifier_list STATIC assignment_expression ']'
 155                    | direct_declarator '[' type_qualifier_list '*' ']'
 156                    | direct_declarator '[' '*' ']'
 157                    | direct_declarator '[' ']'
 158                    | direct_declarator '(' parameter_type_list ')'
 159                    | direct_declarator '(' argument_expression_list ')'
 160                    | direct_declarator '(' ')'

 161  pointer : '*'
 162          | '*' type_qualifier_list
 163          | '*' pointer
 164          | '*' type_qualifier_list pointer

 165  type_qualifier_list : type_qualifier
 166                      | type_qualifier_list type_qualifier

 167  type_qualifier : CONST
 168                 | RESTRICT
 169                 | VOLATILE

 170  parameter_type_list : parameter_list
 171                      | parameter_list ',' ELLIPSIS

 172  parameter_list : parameter_declaration
 173                 | parameter_list ',' parameter_declaration

 174  parameter_declaration : declaration_specifiers declarator
 175                        | declaration_specifiers declarator '=' assignment_expression
 176                        | declaration_specifiers abstract_declarator
 177                        | declaration_specifiers

 178  type_name : specifier_qualifier_list
 179            | specifier_qualifier_list abstract_declarator

 180  abstract_declarator : pointer
 181                      | direct_abstract_declarator
 182                      | pointer direct_abstract_declarator

 183  direct_abstract_declarator : '(' abstract_declarator ')'
 184                             | '[' ']'
 185                             | '[' assignment_expression ']'
 186                             | direct_abstract_declarator '[' ']'
 187                             | direct_abstract_declarator '[' assignment_expression ']'
 188                             | '[' '*' ']'
 189                             | direct_abstract_declarator '[' '*' ']'
 190                             | '(' ')'
 191                             | '(' parameter_type_list ')'
 192                             | direct_abstract_declarator '(' ')'
 193                             | direct_abstract_declarator '(' parameter_type_list ')'

 194  initializer : assignment_expression
 195              | '{' initializer_list '}'
 196              | '{' initializer_list ',' '}'

 197  initializer_list : initializer
 198                   | designation initializer
 199                   | initializer_list ',' initializer
 200                   | initializer_list ',' designation initializer

 201  designation : designator_list '='

 202  designator_list : designator
 203                  | designator_list designator

 204  designator : '[' constant_expression ']'
 205             | '.' IDENTIFIER

 206  statement : labeled_statement
 207            | compound_statement
 208            | expression_statement
 209            | selection_statement
 210            | iteration_statement
 211            | jump_statement

 212  labeled_statement : IDENTIFIER ':' statement

 213  compound_statement : '{' '}'
 214                     | '{' block_item_list '}'

 215  block_item_list : block_item
 216                  | block_item_list block_item

 217  block_item : declaration
 218             | statement

 219  class_body : '{' '}'
 220             | '{' class_block_item_list '}'

 221  class_block_item_list : class_block_item
 222                        | class_block_item_list class_block_item

 223  class_block_item : declaration
 224                   | visibility
 225                   | ctor_declaration
 226                   | VIRTUAL declaration
 227                   | declaration_specifiers init_declarator_list OVERRIDE ';'
 228                   | VIRTUAL declaration_specifiers init_declarator_list OVERRIDE ';'
 229                   | VIRTUAL pure_virtual_declaration

 230  pure_virtual_declaration : declaration_specifiers declarator '=' CONSTANT ';'

 231  visibility : PUBLIC ':'
 232             | PRIVATE ':'
 233             | PROTECTED ':'

 234  ctor_declarator : direct_declarator_identifier_list '(' parameter_type_list ')'
 235                  | direct_declarator_identifier_list '(' ')'

 236  ctor_declaration : ctor_declarator ';'

 237  expression_statement : ';'
 238                       | expression ';'

 239  selection_statement : IF '(' expression ')' statement
 240                      | IF '(' expression ')' statement ELSE statement
 241                      | SWITCH '(' expression ')' '{' switch_cases '}'
 242                      | SWITCH '(' expression ')' '{' '}'

 243  switch_cases : switch_case
 244               | switch_cases switch_case

 245  switch_case : CASE constant_expression ':' block_item_list
 246              | DEFAULT ':' block_item_list

 247  iteration_statement : WHILE '(' expression ')' statement
 248                      | DO statement WHILE '(' expression ')' ';'
 249                      | FOR '(' expression_statement expression_statement ')' statement
 250                      | FOR '(' expression_statement expression_statement expression ')' statement
 251                      | FOR '(' declaration expression_statement ')' statement
 252                      | FOR '(' declaration expression_statement expression ')' statement

 253  jump_statement : GOTO IDENTIFIER ';'
 254                 | CONTINUE ';'
 255                 | BREAK ';'
 256                 | RETURN ';'
 257                 | RETURN expression ';'

 258  translation_unit : external_declaration
 259                   | translation_unit external_declaration

 260  external_declaration : function_definition
 261                       | declaration
 262                       | ';'
 263                       | ctor_definition

 264  function_definition : declaration_specifiers declarator declaration_list compound_statement
 265                      | declaration_specifiers declarator compound_statement

 266  ctor_identifier_list : TYPE_NAME
 267                       | ctor_identifier_list COLONCOLON TYPE_NAME
 268                       | ctor_identifier_list COLONCOLON '~' TYPE_NAME

 269  ctor_definition : ctor_identifier_list '(' ')' compound_statement
 270                  | ctor_identifier_list '(' parameter_type_list ')' compound_statement

 271  declaration_list : declaration
 272                   | preproc declaration
 273                   | declaration_list declaration

 274  preproc : EOL
 275          | '#'
 276          | '\\'

state 0
	$accept : . translation_unit $end  (0)

	TYPE_NAME  shift 1
	TYPEDEF  shift 2
	EXTERN  shift 3
	STATIC  shift 4
	AUTO  shift 5
	REGISTER  shift 6
	INLINE  shift 7
	RESTRICT  shift 8
	CHAR  shift 9
	SHORT  shift 10
	INT  shift 11
	LONG  shift 12
	SIGNED  shift 13
	UNSIGNED  shift 14
	FLOAT  shift 15
	DOUBLE  shift 16
	CONST  shift 17
	VOLATILE  shift 18
	VOID  shift 19
	BOOL  shift 20
	COMPLEX  shift 21
	IMAGINARY  shift 22
	STRUCT  shift 23
	CLASS  shift 24
	UNION  shift 25
	ENUM  shift 26
	';'  shift 27
	.  error

	translation_unit  goto 28
	declaration  goto 29
	declaration_specifiers  goto 30
	storage_class_specifier  goto 31
	type_specifier  goto 32
	type_qualifier  goto 33
	function_specifier  goto 34
	struct_or_union_or_class_specifier  goto 35
	enum_specifier  goto 36
	struct_or_union_or_class  goto 37
	external_declaration  goto 38
	function_definition  goto 39
	ctor_definition  goto 40
	ctor_identifier_list  goto 41


1: reduce/reduce conflict (reduce 114, reduce 266) on '('
state 1
	type_specifier : TYPE_NAME .  (114)
	ctor_identifier_list : TYPE_NAME .  (266)

	IDENTIFIER  reduce 114
	COLONCOLON  reduce 266
	TYPE_NAME  reduce 114
	TYPEDEF  reduce 114
	EXTERN  reduce 114
	STATIC  reduce 114
	AUTO  reduce 114
	REGISTER  reduce 114
	INLINE  reduce 114
	RESTRICT  reduce 114
	CHAR  reduce 114
	SHORT  reduce 114
	INT  reduce 114
	LONG  reduce 114
	SIGNED  reduce 114
	UNSIGNED  reduce 114
	FLOAT  reduce 114
	DOUBLE  reduce 114
	CONST  reduce 114
	VOLATILE  reduce 114
	VOID  reduce 114
	BOOL  reduce 114
	COMPLEX  reduce 114
	IMAGINARY  reduce 114
	STRUCT  reduce 114
	CLASS  reduce 114
	UNION  reduce 114
	ENUM  reduce 114
	'('  reduce 114
	'*'  reduce 114
	'~'  reduce 114
	';'  reduce 114


state 2
	storage_class_specifier : TYPEDEF .  (95)

	.  reduce 95


state 3
	storage_class_specifier : EXTERN .  (96)

	.  reduce 96


state 4
	storage_class_specifier : STATIC .  (97)

	.  reduce 97


state 5
	storage_class_specifier : AUTO .  (98)

	.  reduce 98


state 6
	storage_class_specifier : REGISTER .  (99)

	.  reduce 99


state 7
	function_specifier : INLINE .  (141)

	.  reduce 141


state 8
	type_qualifier : RESTRICT .  (168)

	.  reduce 168


state 9
	type_specifier : CHAR .  (101)

	.  reduce 101


state 10
	type_specifier : SHORT .  (102)

	.  reduce 102


state 11
	type_specifier : INT .  (103)

	.  reduce 103


state 12
	type_specifier : LONG .  (104)

	.  reduce 104


state 13
	type_specifier : SIGNED .  (107)

	.  reduce 107


state 14
	type_specifier : UNSIGNED .  (108)

	.  reduce 108


state 15
	type_specifier : FLOAT .  (105)

	.  reduce 105


state 16
	type_specifier : DOUBLE .  (106)

	.  reduce 106


state 17
	type_qualifier : CONST .  (167)

	.  reduce 167


state 18
	type_qualifier : VOLATILE .  (169)

	.  reduce 169


state 19
	type_specifier : VOID .  (100)

	.  reduce 100


state 20
	type_specifier : BOOL .  (109)

	.  reduce 109


state 21
	type_specifier : COMPLEX .  (110)

	.  reduce 110


state 22
	type_specifier : IMAGINARY .  (111)

	.  reduce 111


state 23
	struct_or_union_or_class : STRUCT .  (125)

	.  reduce 125


state 24
	struct_or_union_or_class : CLASS .  (126)

	.  reduce 126


state 25
	struct_or_union_or_class : UNION .  (127)

	.  reduce 127


state 26
	enum_specifier : ENUM . '{' enumerator_list '}'  (132)
	enum_specifier : ENUM . identifier_or_typename '{' enumerator_list '}'  (133)
	enum_specifier : ENUM . '{' enumerator_list ',' '}'  (134)
	enum_specifier : ENUM . identifier_or_typename '{' enumerator_list ',' '}'  (135)
	enum_specifier : ENUM . identifier_or_typename  (136)

	IDENTIFIER  shift 42
	TYPE_NAME  shift 43
	'{'  shift 44
	.  error

	identifier_or_typename  goto 45


state 27
	external_declaration : ';' .  (262)

	.  reduce 262


state 28
	$accept : translation_unit . $end  (0)
	translation_unit : translation_unit . external_declaration  (259)

	$end  accept
	TYPE_NAME  shift 1
	TYPEDEF  shift 2
	EXTERN  shift 3
	STATIC  shift 4
	AUTO  shift 5
	REGISTER  shift 6
	INLINE  shift 7
	RESTRICT  shift 8
	CHAR  shift 9
	SHORT  shift 10
	INT  shift 11
	LONG  shift 12
	SIGNED  shift 13
	UNSIGNED  shift 14
	FLOAT  shift 15
	DOUBLE  shift 16
	CONST  shift 17
	VOLATILE  shift 18
	VOID  shift 19
	BOOL  shift 20
	COMPLEX  shift 21
	IMAGINARY  shift 22
	STRUCT  shift 23
	CLASS  shift 24
	UNION  shift 25
	ENUM  shift 26
	';'  shift 27
	.  error

	declaration  goto 29
	declaration_specifiers  goto 30
	storage_class_specifier  goto 31
	type_specifier  goto 32
	type_qualifier  goto 33
	function_specifier  goto 34
	struct_or_union_or_class_specifier  goto 35
	enum_specifier  goto 36
	struct_or_union_or_class  goto 37
	external_declaration  goto 46
	function_definition  goto 39
	ctor_definition  goto 40
	ctor_identifier_list  goto 41


state 29
	external_declaration : declaration .  (261)

	.  reduce 261


state 30
	declaration : declaration_specifiers . ';'  (81)
	declaration : declaration_specifiers . init_declarator_list ';'  (82)
	function_definition : declaration_specifiers . declarator declaration_list compound_statement  (264)
	function_definition : declaration_specifiers . declarator compound_statement  (265)

	IDENTIFIER  shift 47
	'('  shift 48
	'*'  shift 49
	'~'  shift 50
	';'  shift 51
	.  error

	init_declarator_list  goto 52
	init_declarator  goto 53
	declarator  goto 54
	pointer  goto 55
	direct_declarator  goto 56
	direct_declarator_identifier_list  goto 57


state 31
	declaration_specifiers : storage_class_specifier .  (83)
	declaration_specifiers : storage_class_specifier . declaration_specifiers  (84)

	TYPE_NAME  shift 58
	TYPEDEF  shift 2
	EXTERN  shift 3
	STATIC  shift 4
	AUTO  shift 5
	REGISTER  shift 6
	INLINE  shift 7
	RESTRICT  shift 8
	CHAR  shift 9
	SHORT  shift 10
	INT  shift 11
	LONG  shift 12
	SIGNED  shift 13
	UNSIGNED  shift 14
	FLOAT  shift 15
	DOUBLE  shift 16
	CONST  shift 17
	VOLATILE  shift 18
	VOID  shift 19
	BOOL  shift 20
	COMPLEX  shift 21
	IMAGINARY  shift 22
	STRUCT  shift 23
	CLASS  shift 24
	UNION  shift 25
	ENUM  shift 26
	IDENTIFIER  reduce 83
	'('  reduce 83
	')'  reduce 83
	'['  reduce 83
	','  reduce 83
	'*'  reduce 83
	'~'  reduce 83
	';'  reduce 83

	declaration_specifiers  goto 59
	storage_class_specifier  goto 31
	type_specifier  goto 32
	type_qualifier  goto 33
	function_specifier  goto 34
	struct_or_union_or_class_specifier  goto 35
	enum_specifier  goto 36
	struct_or_union_or_class  goto 37


state 32
	declaration_specifiers : type_specifier .  (85)
	declaration_specifiers : type_specifier . declaration_specifiers  (86)

	TYPE_NAME  shift 58
	TYPEDEF  shift 2
	EXTERN  shift 3
	STATIC  shift 4
	AUTO  shift 5
	REGISTER  shift 6
	INLINE  shift 7
	RESTRICT  shift 8
	CHAR  shift 9
	SHORT  shift 10
	INT  shift 11
	LONG  shift 12
	SIGNED  shift 13
	UNSIGNED  shift 14
	FLOAT  shift 15
	DOUBLE  shift 16
	CONST  shift 17
	VOLATILE  shift 18
	VOID  shift 19
	BOOL  shift 20
	COMPLEX  shift 21
	IMAGINARY  shift 22
	STRUCT  shift 23
	CLASS  shift 24
	UNION  shift 25
	ENUM  shift 26
	IDENTIFIER  reduce 85
	'('  reduce 85
	')'  reduce 85
	'['  reduce 85
	','  reduce 85
	'*'  reduce 85
	'~'  reduce 85
	';'  reduce 85

	declaration_specifiers  goto 60
	storage_class_specifier  goto 31
	type_specifier  goto 32
	type_qualifier  goto 33
	function_specifier  goto 34
	struct_or_union_or_class_specifier  goto 35
	enum_specifier  goto 36
	struct_or_union_or_class  goto 37


state 33
	declaration_specifiers : type_qualifier .  (87)
	declaration_specifiers : type_qualifier . declaration_specifiers  (88)

	TYPE_NAME  shift 58
	TYPEDEF  shift 2
	EXTERN  shift 3
	STATIC  shift 4
	AUTO  shift 5
	REGISTER  shift 6
	INLINE  shift 7
	RESTRICT  shift 8
	CHAR  shift 9
	SHORT  shift 10
	INT  shift 11
	LONG  shift 12
	SIGNED  shift 13
	UNSIGNED  shift 14
	FLOAT  shift 15
	DOUBLE  shift 16
	CONST  shift 17
	VOLATILE  shift 18
	VOID  shift 19
	BOOL  shift 20
	COMPLEX  shift 21
	IMAGINARY  shift 22
	STRUCT  shift 23
	CLASS  shift 24
	UNION  shift 25
	ENUM  shift 26
	IDENTIFIER  reduce 87
	'('  reduce 87
	')'  reduce 87
	'['  reduce 87
	','  reduce 87
	'*'  reduce 87
	'~'  reduce 87
	';'  reduce 87

	declaration_specifiers  goto 61
	storage_class_specifier  goto 31
	type_specifier  goto 32
	type_qualifier  goto 33
	function_specifier  goto 34
	struct_or_union_or_class_specifier  goto 35
	enum_specifier  goto 36
	struct_or_union_or_class  goto 37


state 34
	declaration_specifiers : function_specifier .  (89)
	declaration_specifiers : function_specifier . declaration_specifiers  (90)

	TYPE_NAME  shift 58
	TYPEDEF  shift 2
	EXTERN  shift 3
	STATIC  shift 4
	AUTO  shift 5
	REGISTER  shift 6
	INLINE  shift 7
	RESTRICT  shift 8
	CHAR  shift 9
	SHORT  shift 10
	INT  shift 11
	LONG  shift 12
	SIGNED  shift 13
	UNSIGNED  shift 14
	FLOAT  shift 15
	DOUBLE  shift 16
	CONST  shift 17
	VOLATILE  shift 18
	VOID  shift 19
	BOOL  shift 20
	COMPLEX  shift 21
	IMAGINARY  shift 22
	STRUCT  shift 23
	CLASS  shift 24
	UNION  shift 25
	ENUM  shift 26
	IDENTIFIER  reduce 89
	'('  reduce 89
	')'  reduce 89
	'['  reduce 89
	','  reduce 89
	'*'  reduce 89
	'~'  reduce 89
	';'  reduce 89

	declaration_specifiers  goto 62
	storage_class_specifier  goto 31
	type_specifier  goto 32
	type_qualifier  goto 33
	function_specifier  goto 34
	struct_or_union_or_class_specifier  goto 35
	enum_specifier  goto 36
	struct_or_union_or_class  goto 37


state 35
	type_specifier : struct_or_union_or_class_specifier .  (112)

	.  reduce 112


state 36
	type_specifier : enum_specifier .  (113)

	.  reduce 113


state 37
	struct_or_union_or_class_specifier : struct_or_union_or_class . identifier_or_typename class_body  (117)
	struct_or_union_or_class_specifier : struct_or_union_or_class . identifier_or_typename ':' base_specifier class_body  (118)
	struct_or_union_or_class_specifier : struct_or_union_or_class . class_body  (119)
	struct_or_union_or_class_specifier : struct_or_union_or_class . identifier_or_typename  (120)

	IDENTIFIER  shift 42
	TYPE_NAME  shift 43
	'{'  shift 63
	.  error

	identifier_or_typename  goto 64
	class_body  goto 65


state 38
	translation_unit : external_declaration .  (258)

	.  reduce 258


state 39
	external_declaration : function_definition .  (260)

	.  reduce 260


state 40
	external_declaration : ctor_definition .  (263)

	.  reduce 263


state 41
	ctor_identifier_list : ctor_identifier_list . COLONCOLON TYPE_NAME  (267)
	ctor_identifier_list : ctor_identifier_list . COLONCOLON '~' TYPE_NAME  (268)
	ctor_definition : ctor_identifier_list . '(' ')' compound_statement  (269)
	ctor_definition : ctor_identifier_list . '(' parameter_type_list ')' compound_statement  (270)

	COLONCOLON  shift 66
	'('  shift 67
	.  error


state 42
	identifier_or_typename : IDENTIFIER .  (115)

	.  reduce 115


state 43
	identifier_or_typename : TYPE_NAME .  (116)

	.  reduce 116


state 44
	enum_specifier : ENUM '{' . enumerator_list '}'  (132)
	enum_specifier : ENUM '{' . enumerator_list ',' '}'  (134)

	IDENTIFIER  shift 68
	.  error

	enumerator_list  goto 69
	enumerator  goto 70


state 45
	enum_specifier : ENUM identifier_or_typename . '{' enumerator_list '}'  (133)
	enum_specifier : ENUM identifier_or_typename . '{' enumerator_list ',' '}'  (135)
	enum_specifier : ENUM identifier_or_typename .  (136)

	'{'  shift 71
	IDENTIFIER  reduce 136
	TYPE_NAME  reduce 136
	TYPEDEF  reduce 136
	EXTERN  reduce 136
	STATIC  reduce 136
	AUTO  reduce 136
	REGISTER  reduce 136
	INLINE  reduce 136
	RESTRICT  reduce 136
	CHAR  reduce 136
	SHORT  reduce 136
	INT  reduce 136
	LONG  reduce 136
	SIGNED  reduce 136
	UNSIGNED  reduce 136
	FLOAT  reduce 136
	DOUBLE  reduce 136
	CONST  reduce 136
	VOLATILE  reduce 136
	VOID  reduce 136
	BOOL  reduce 136
	COMPLEX  reduce 136
	IMAGINARY  reduce 136
	STRUCT  reduce 136
	CLASS  reduce 136
	UNION  reduce 136
	ENUM  reduce 136
	'('  reduce 136
	')'  reduce 136
	'['  reduce 136
	','  reduce 136
	'*'  reduce 136
	'~'  reduce 136
	';'  reduce 136


state 46
	translation_unit : translation_unit external_declaration .  (259)

	.  reduce 259


state 47
	direct_declarator_identifier_list : IDENTIFIER .  (144)

	.  reduce 144


state 48
	direct_declarator : '(' . declarator ')'  (149)

	IDENTIFIER  shift 47
	'('  shift 48
	'*'  shift 49
	'~'  shift 50
	.  error

	declarator  goto 72
	pointer  goto 55
	direct_declarator  goto 56
	direct_declarator_identifier_list  goto 57


state 49
	pointer : '*' .  (161)
	pointer : '*' . type_qualifier_list  (162)
	pointer : '*' . pointer  (163)
	pointer : '*' . type_qualifier_list pointer  (164)

	RESTRICT  shift 8
	CONST  shift 17
	VOLATILE  shift 18
	'*'  shift 49
	IDENTIFIER  reduce 161
	'('  reduce 161
	')'  reduce 161
	'['  reduce 161
	','  reduce 161
	'~'  reduce 161

	type_qualifier  goto 73
	pointer  goto 74
	type_qualifier_list  goto 75


state 50
	direct_declarator_identifier_list : '~' . IDENTIFIER  (145)

	IDENTIFIER  shift 76
	.  error


state 51
	declaration : declaration_specifiers ';' .  (81)

	.  reduce 81


state 52
	declaration : declaration_specifiers init_declarator_list . ';'  (82)
	init_declarator_list : init_declarator_list . ',' init_declarator  (92)

	','  shift 77
	';'  shift 78
	.  error


state 53
	init_declarator_list : init_declarator .  (91)

	.  reduce 91


state 54
	init_declarator : declarator .  (93)
	init_declarator : declarator . '=' initializer  (94)
	function_definition : declaration_specifiers declarator . declaration_list compound_statement  (264)
	function_definition : declaration_specifiers declarator . compound_statement  (265)

	TYPE_NAME  shift 58
	TYPEDEF  shift 2
	EXTERN  shift 3
	STATIC  shift 4
	AUTO  shift 5
	REGISTER  shift 6
	INLINE  shift 7
	RESTRICT  shift 8
	CHAR  shift 9
	SHORT  shift 10
	INT  shift 11
	LONG  shift 12
	SIGNED  shift 13
	UNSIGNED  shift 14
	FLOAT  shift 15
	DOUBLE  shift 16
	CONST  shift 17
	VOLATILE  shift 18
	VOID  shift 19
	BOOL  shift 20
	COMPLEX  shift 21
	IMAGINARY  shift 22
	STRUCT  shift 23
	CLASS  shift 24
	UNION  shift 25
	ENUM  shift 26
	EOL  shift 79
	'{'  shift 80
	'='  shift 81
	'#'  shift 82
	'\\'  shift 83
	','  reduce 93
	';'  reduce 93

	declaration  goto 84
	declaration_specifiers  goto 85
	storage_class_specifier  goto 31
	type_specifier  goto 32
	type_qualifier  goto 33
	function_specifier  goto 34
	struct_or_union_or_class_specifier  goto 35
	enum_specifier  goto 36
	struct_or_union_or_class  goto 37
	compound_statement  goto 86
	declaration_list  goto 87
	preproc  goto 88


state 55
	declarator : pointer . direct_declarator  (142)

	IDENTIFIER  shift 47
	'('  shift 48
	'~'  shift 50
	.  error

	direct_declarator  goto 89
	direct_declarator_identifier_list  goto 57


state 56
	declarator : direct_declarator .  (143)
	direct_declarator : direct_declarator . '[' type_qualifier_list assignment_expression ']'  (150)
	direct_declarator : direct_declarator . '[' type_qualifier_list ']'  (151)
	direct_declarator : direct_declarator . '[' assignment_expression ']'  (152)
	direct_declarator : direct_declarator . '[' STATIC type_qualifier_list assignment_expression ']'  (153)
	direct_declarator : direct_declarator . '[' type_qualifier_list STATIC assignment_expression ']'  (154)
	direct_declarator : direct_declarator . '[' type_qualifier_list '*' ']'  (155)
	direct_declarator : direct_declarator . '[' '*' ']'  (156)
	direct_declarator : direct_declarator . '[' ']'  (157)
	direct_declarator : direct_declarator . '(' parameter_type_list ')'  (158)
	direct_declarator : direct_declarator . '(' argument_expression_list ')'  (159)
	direct_declarator : direct_declarator . '(' ')'  (160)
